--- a/Dotabuff_2.0/Views/Shared/_Layout.cshtml
+++ b/Dotabuff_2.0/Views/Shared/_Layout.cshtml
@@ -7,9 +7,8 @@
     <link rel="stylesheet" href="~/css/site.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/footer.css" />
-
 </head>
-<body class="bg-dark text-light">
+<body>
     <header class="navbar navbar-expand-lg navbar-dark bg-primary">
         <div class="container-fluid">
             <a class="navbar-brand" href="/">DotaBuff v2.0</a>
@@ -23,6 +22,9 @@
                     <li class="nav-item"><a class="nav-link" href="/Items">Items</a></li>
                     <li class="nav-item"><a class="nav-link" href="/Admin">Admin</a></li>
                 </ul>
+                <div class="ms-auto">
+                    <partial name="_LoginPartial" />
+                </div>
             </div>
         </div>
     </header>
@@ -40,3 +42,4 @@
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
+
