--- a/Dotabuff_2.0/Views/Shared/_Layout.cshtml
+++ b/Dotabuff_2.0/Views/Shared/_Layout.cshtml
@@ -21,6 +21,7 @@
                     <li class="nav-item"><a class="nav-link" href="/Heroes">Heroes</a></li>
                     <li class="nav-item"><a class="nav-link" href="/Items">Items</a></li>
                     <li class="nav-item"><a class="nav-link" href="/Admin">Admin</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/Matches">Matches</a></li>
                 </ul>
                 <div class="ms-auto">
                     <partial name="_LoginPartial" />
