--- a/Dotabuff_2.0/Views/Matches/Index.cshtml
+++ b/Dotabuff_2.0/Views/Matches/Index.cshtml
@@ -2,42 +2,56 @@
 @{
     ViewBag.Title = "Esports Matches";
     var currentPage = ViewBag.CurrentPage;
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Esports Matches</h2>
+<html>
+    <head>
+        <title>Home</title>
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+        <link rel="stylesheet" href="~/css/site.css" />
+    </head>
+    <body>
+    <div style="display: inline-block;">
+        <h3>Esports Matches</h3>
 
-<table class="table">
-    <thead>
-        <tr>
-            <th>League</th>
-            <th>Match ID</th>
-            <th>Date</th>
-            <th>Series</th>
-            <th>Radiant Team</th>
-            <th>Dire Team</th>
-            <th>Duration</th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var match in Model)
-        {
-            <tr>
-                <td>@match.League</td>
-                <td>@match.MatchId</td>
-                <td>@match.Date</td>
-                <td>@match.Series</td>
-                <td>@match.RadiantTeam</td>
-                <td>@match.DireTeam</td>
-                <td>@match.Duration</td>
-            </tr>
-        }
-    </tbody>
-</table>
+        <table>
+            <thead>
+                <tr>
+                    <th>League</th>
+                    <th>Match ID</th>
+                    <th>Date</th>
+                    <th>Series</th>
+                    <th>Radiant Team</th>
+                    <th>Dire Team</th>
+                    <th>Duration</th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var match in Model)
+                {
+                    <tr>
+                        <td>@match.League</td>
+                        <td>@match.MatchId</td>
+                        <td>@match.Date</td>
+                        <td>@match.Series</td>
+                        <td>@match.RadiantTeam</td>
+                        <td>@match.DireTeam</td>
+                        <td>@match.Duration</td>
+                    </tr>
+                }
+            </tbody>
+        </table>
 
-<div class="pagination">
-    @if (currentPage > 1)
-    {
-        <a href="@Url.Action("Index", new { page = currentPage - 1 })" class="btn btn-primary">Previous</a>
-    }
-    <a href="@Url.Action("Index", new { page = currentPage + 1 })" class="btn btn-primary">Next</a>
-</div>
+        <div class="pagination">
+            @if (currentPage > 1)
+            {
+                <a href="@Url.Action("Index", new { page = currentPage - 1 })" class="btn btn-primary btn-block">Previous</a>
+            }
+            <a href="@Url.Action("Index", new { page = currentPage + 1 })" class="btn btn-primary btn-block">Next</a>
+        </div>
+    </div>
+
+    </body>
+</html>
+
