--- a/Dotabuff_2.0/Views/Matches/Index.cshtml
+++ b/Dotabuff_2.0/Views/Matches/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<Match>
+﻿@model List<Dotabuff_2._0.Models.Match>
 @{
     ViewBag.Title = "Esports Matches";
     var currentPage = ViewBag.CurrentPage;
@@ -6,12 +6,12 @@
 }
 
 <html>
-    <head>
-        <title>Home</title>
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
-        <link rel="stylesheet" href="~/css/site.css" />
-    </head>
-    <body>
+<head>
+    <title>Esports Matches</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="~/css/site.css" />
+</head>
+<body>
     <div style="display: inline-block;">
         <h3>Esports Matches</h3>
 
@@ -22,8 +22,8 @@
                     <th>Match ID</th>
                     <th>Date</th>
                     <th>Series</th>
-                    <th>Radiant Team</th>
-                    <th>Dire Team</th>
+                    <th>Won (Dire)</th>
+                    <th>Lost (Radiant)</th>
                     <th>Duration</th>
                 </tr>
             </thead>
@@ -35,8 +35,22 @@
                         <td>@match.MatchId</td>
                         <td>@match.Date</td>
                         <td>@match.Series</td>
-                        <td>@match.RadiantTeam</td>
-                        <td>@match.DireTeam</td>
+                        <td class="cell-xlarge r-none-mobile winner">
+                            <div>
+                                @foreach (var heroIcon in match.DireHeroes)
+                                {
+                                    <img class="img-icon" src="@heroIcon" />
+                                }
+                            </div>
+                        </td>
+                        <td class="cell-xlarge r-none-mobile">
+                            <div>
+                                @foreach (var heroIcon in match.RadiantHeroes)
+                                {
+                                    <img class="img-icon" src="@heroIcon" />
+                                }
+                            </div>
+                        </td>
                         <td>@match.Duration</td>
                     </tr>
                 }
@@ -51,7 +65,5 @@
             <a href="@Url.Action("Index", new { page = currentPage + 1 })" class="btn btn-primary btn-block">Next</a>
         </div>
     </div>
-
-    </body>
+</body>
 </html>
-
