--- a/Dotabuff_2.0/Views/Admin/Index.cshtml
+++ b/Dotabuff_2.0/Views/Admin/Index.cshtml
@@ -10,10 +10,14 @@
 
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"> <!-- Для иконок -->
+
         <link rel="stylesheet" href="~/css/site.css" />
 
     </head>
     <body>
+        <div id="admin-image"></div>
+
         <h2>Admin Panel</h2>
 
         <div class="admin-actions">
