--- a/Dotabuff_2.0/Views/Heroes/Index.cshtml
+++ b/Dotabuff_2.0/Views/Heroes/Index.cshtml
@@ -9,13 +9,16 @@
         <title>Heroes</title>
 
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
-        @* <link rel="stylesheet" href="~/css/heroes.css"> *@
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"> <!-- Для иконок -->
+    @* <link rel="stylesheet" href="~/css/heroes.css"> *@
         <link rel="stylesheet" href="~/css/site.css" />
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
         <script src="~/js/heroes.js"></script>
     </head>
     <body>
+        <div id="hero-image"></div>
+
         <div class="container mt-4">
             <h1>Heroes</h1>
             <div class="mb-3">
