--- a/Dotabuff_2.0/Views/Items/Index.cshtml
+++ b/Dotabuff_2.0/Views/Items/Index.cshtml
@@ -10,10 +10,13 @@
     <head>
         <title>Home</title>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"> <!-- Для иконок -->
+
         <link rel="stylesheet" href="~/css/site.css" />
     </head>
 
     <body>
+        <div id="item-image"></div>
 
         <h1 class="my-4 text-center">Dota 2 Items</h1>
 
