--- a/Dotabuff_2.0/Views/Matches/Index.cshtml
+++ b/Dotabuff_2.0/Views/Matches/Index.cshtml
@@ -9,10 +9,14 @@
 <head>
     <title>Esports Matches</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"> <!-- Для иконок -->
+
     <link rel="stylesheet" href="~/css/site.css" />
 </head>
 <body>
     <div style="display: inline-block;">
+        <div id="match-image"></div>
+
         <h3>Esports Matches</h3>
 
         <table>
@@ -39,7 +43,7 @@
                             <div>
                                 @foreach (var heroIcon in match.DireHeroes)
                                 {
-                                    <img class="img-icon" src="@heroIcon" />
+                                    <img class="img-icon img-hero" src="@heroIcon" />
                                 }
                             </div>
                         </td>
@@ -47,7 +51,7 @@
                             <div>
                                 @foreach (var heroIcon in match.RadiantHeroes)
                                 {
-                                    <img class="img-icon" src="@heroIcon" />
+                                    <img class="img-icon img-hero" src="@heroIcon" />
                                 }
                             </div>
                         </td>
