--- a/Dotabuff_2.0/Views/Shared/_Layout.cshtml
+++ b/Dotabuff_2.0/Views/Shared/_Layout.cshtml
@@ -35,7 +35,7 @@
     </main>
 
     <footer id="main-footer" class="text-center py-3">
-        &copy; @DateTime.Now.Year - DotaBuffClone
+        &copy; @DateTime.Now.Year - DotaBuff 2.0 Made by Vi_Persh & Amorgiov
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
