--- a/Dotabuff_2.0/Views/Shared/_Layout.cshtml
+++ b/Dotabuff_2.0/Views/Shared/_Layout.cshtml
@@ -7,11 +7,15 @@
     <link rel="stylesheet" href="~/css/site.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/footer.css" />
+    <link rel="icon" type="image/png" href="~/img/icons8-дота-2-gradient-512.png" />
 </head>
+
 <body>
     <header class="navbar navbar-expand-lg navbar-dark bg-primary">
         <div class="container-fluid">
-            <a class="navbar-brand" href="/">DotaBuff v2.0</a>
+            <a class="navbar-brand" href="/">
+                <img src="~/img/icons8-дота-2-gradient-512.png" alt="Dota 2 Icon" style="width: 30px; height: 30px; margin-right: 10px;">DotaBuff v2.0
+            </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#dotabuff-navbarNav" aria-controls="dotabuff-navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -43,4 +47,3 @@
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
-
