--- a/Dotabuff_2.0/Views/Shared/_Layout.cshtml
+++ b/Dotabuff_2.0/Views/Shared/_Layout.cshtml
@@ -47,6 +47,7 @@
         &copy; @DateTime.Now.Year - DotaBuff 2.0 Made by Vi_Persh & Amorgiov
     </footer>
 
+    <script src="//code.jivo.ru/widget/EgEkvT495t" async></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js"></script>
     @await RenderSectionAsync("Scripts", required: false)
